# Minimalist_translation

./: .gitignore  CMakeLists.txt  README.md  a.cache  mTrs.pro  settings.json  test.html
_ex/: ex.cpp  n.txt
lib/QHotkey/: CMakeLists.txt  qhotkey.h
lib/frameless/: framelesswindow.cpp  framelesswindow.h
resource/: res.qrc  style.qss  youdao.db
resource/QSS/: main.qss
resource/icon/: 90.jfif  OIP-C.jfif
resource/key/: youdao.json
scripts/: build_debug.bat  build_release.bat
src/: Translation.h  main.cpp
src/class_mg/: getText.cpp  getText.h
src/class_ui/: mTrs.cpp  mTrs.h  mTrs.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qss.h  titlebar.cpp  titlebar.h  titlebar.ui
src/core/: TransEngine.h  Translation.cpp  Translation.h
src/core/engines/: Youdao.cpp  Youdao.h  youdao.sl.h
src/lib/: Translation.cpp  Translation.h
src/lib/core/: TransEngine.h  Translation.cpp  Translation.h
src/lib/core/engines/: Youdao.cpp  Youdao.h
src/resourse/: Resource.cpp  Resource.h
src/ui/: MTranslation.cpp  MTranslation.h  MTranslation.ui  app_win32.rc
test/: main.cpp  test1.cpp
w/: Untitled-1.sql  Untitled.sql  cache.db  out.sql
极简翻译v1.0.1/: README.md
